[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/User.gd" type="Script" id=1]
[ext_resource path="res://assets/progress_bar/under.jpeg" type="Texture" id=2]
[ext_resource path="res://assets/progress_bar/progress.jpg" type="Texture" id=3]
[ext_resource path="res://assets/ducks/duck3.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.9356, 9.72439 )

[node name="User" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.349654, -12.0629 )
scale = Vector2( 2.50787, 2.50787 )
texture = ExtResource( 4 )

[node name="Username" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -83.3773
margin_top = -49.7343
margin_right = 82.6227
margin_bottom = -35.7343
text = "Test"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -158.0
margin_top = -105.659
margin_right = 158.0
margin_bottom = -58.6591
text = "message pourri"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XpBar" type="TextureProgress" parent="."]
margin_left = -30.0
margin_top = -60.0
margin_right = 30.0
margin_bottom = -52.0
step = 1.0
allow_greater = true
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerMessage" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Colision" type="CollisionShape2D" parent="."]
position = Vector2( 0.4, -1.65328 )
shape = SubResource( 2 )
one_way_collision_margin = 0.0
[connection signal="timeout" from="TimerMessage" to="." method="_on_Timer_timeout"]
